Changelog
=========

2019.4.0rc6 (unreleased)
------------------------

- Fix fallback to default sorting index in listing endpoint. [njohner]
- Fixes is already done check in multi admin unit tasks completion. [phgross]
- Fix @history patch endpoint to correctly revert to older document version. [njohner]
- Fix unicode error in @listing endpoint filters. [lgraf]
- Fix document serialization for older document versions. [phgross]
- Add main dossier count to contentstats. [njohner]
- No longer add journal entry for document file modification. [njohner]
- Revoke permissions for former responsible, when task gets rejected. [phgross]
- Use BaseResponse for proposal history to add API support. [njohner]


2019.4.0rc5 (2019-11-13)
------------------------

- Bump ftw.keywordwidget to 2.1.2 to fix race condition when adding new keywords. [lgraf]
- Fix an issue with non-ASCII characters in proposal doc-properties. [deiferni]
- Add trash_document and untrash_document file_actions. [lgraf]
- Bump plone.restapi to 5.0.3 to get fix for filtering vocabs by non-ASCII titles. [lgraf]
- Add document creator metadata to available docproperties. [deiferni]
- Update the usersettings-serializer: A pure plone user has always seen all screens. [elioschmutz]
- Support combined notation for task responsible. [phgross]
- Fix an issue with todo(-list) ids not being stored as bytestring. [deiferni]
- Disallow mail upload as documents via API. [phgross]
- Update Products.LDAPUserFolder from 2.28.post2 to 2.28.post3. [elioschmutz]
- Extend dossier serializer with `is_subdossier`. [elioschmutz]
- Add @globalindex API endpoint. [phgross]
- Add proposals to @listing endpoint. [njohner]
- Remove catalog support for @listing endpoint. [elioschmutz]
- Moved reminder options vocabulary to globaly registered vocabulary. [phgross]
- Add a user action to switch to the new gever-ui. [elioschmutz]
- Add support for contacts to the @listing endpoint. [phgross]


2019.4.0rc4 (2019-10-22)